tests/ui/ferrocene/compiler-arguments/upper_c_panic/upper_c_panic_invalid.rs
//@ check-fail
//@ compile-flags: -Cpanic=invalid
//~? ERROR incorrect value

fn main() {}

// ferrocene-annotations: um_rustc_C_panic
